<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <TextView
        android:id="@+id/dangerousAboutTv"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dangerousInstallAppSilentBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_install_silent" />

    <Button
        android:id="@+id/dangerousUninstallAppSilentBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_uninstall_silent" />


    <Button
        android:id="@+id/dangerousShutdownBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_shutdown" />

    <Button
        android:id="@+id/dangerousRebootBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_reboot" />

    <Button
        android:id="@+id/dangerousReboot2RecoveryBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_reboot_to_recovery" />

    <Button
        android:id="@+id/dangerousReboot2BootloaderBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_reboot_to_bootloader" />

    <Button
        android:id="@+id/dangerousSendSmsSilentBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_reboot_to_bootloader" />

    <CheckBox
        android:id="@+id/dangerousMobileDataEnabledCb"
        style="@style/CbStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_send_sms_silent" />

</LinearLayout>
